tests/fixtures/svs-v3/invalid/duplicate-state-vector.hex
24740672071108036e646e08077370656331313436010314001534c918ca16070908046e6f6465080161d209d4046553f100d60101c918ca16070908046e6f6465080161d209d4046553f100d6010116031b01001720b9553703779f8a5685187f838173cf66585b16afe2bb4a37bf1af6c880f3b84f
